Zephyr: Added 2 more test cases (duplicate_syscalls and zephyr_button)

--- a/test/zephyr_test/meson.build
+++ b/test/zephyr_test/meson.build
@@ -8,6 +8,28 @@ test('zephyr_blinky',
         suite: 'zephyr'
 )
 
+test('zephyr_button',
+        py3_inst,
+        args: [files('../instance_graph.py'), graphs / 'zephyr_button.json', zephyr_button, 'ZEPHYR'],
+        env: [python_path],
+        suite: 'zephyr'
+)
+
+# C++ is currently not supported
+#test('zephyr_cpp_sems',
+#        py3_inst,
+#        args: [files('../instance_graph.py'), graphs / 'zephyr_cpp_sems.json', zephyr_cpp_sems, 'ZEPHYR'],
+#        env: [python_path],
+#        suite: 'zephyr'
+#)
+
+test('zephyr_duplicate_syscalls',
+        py3_inst,
+        args: [files('../instance_graph.py'), graphs / 'duplicate_syscalls.json', zephyr_duplicate_syscalls, 'ZEPHYR'],
+        env: [python_path],
+        suite: 'zephyr'
+)
+
 test('zephyr_static_threads',
         py3_inst,
         args: [files('../instance_graph.py'), graphs / 'static_threads.json', zephyr_static_threads, 'ZEPHYR'],
