steps: load timings from BBs

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -66,6 +66,7 @@ step_mod = py3_inst.extension_module('step',
         'option.cpp',
         'step_manager.cpp',
         'bb_split.cpp',
+        'bb_timings.cpp',
         'cdummy.cpp',
         'comp_insert.cpp',
         'fake_entry_point.cpp',
