appl: dynamic benchmark generator

--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -258,3 +258,6 @@ foreach app : autosar_apps
   set_variable(full_name, app)
   autosar_targets += [app]
 endforeach
+
+
+subdir('multicore/dynamic')
