--- a/appl/AUTOSAR/meson.build
+++ b/appl/AUTOSAR/meson.build
@@ -119,7 +119,7 @@ autosar_apps = [
   {'core': 'multicore',  'path': 'timing',             'name': 'a',                     'oil': 'system_a.json', 'timing': 'a_timing.json'},
   {'core': 'multicore',  'path': 'timing',             'name': 'b',                     'oil': 'system_b.json', 'timing': 'b_timing.json'},
   {'core': 'multicore',  'path': 'timing',             'name': 'c',                     'oil': 'system_c.json', 'timing': 'c_timing.json'},
-  {'core': 'multicore',  'path': 'paper',              'name': 'running',               'oil': 'system_running.json', 'locks': 'EXTRACT', 'timing': 'BB'},
+  {'core': 'multicore',  'path': 'paper',              'name': 'running',               'oil': 'system_running.json', 'mtrace': 'running.trace.json', 'locks': 'EXTRACT', 'timing': 'BB', 'ttrace': 'running.timing.trace.json'},
   {'core': 'multicore',  'path': 'paper',              'name': 'running_long11',        'oil': 'system_running.json', 'locks': 'EXTRACT', 'timing': 'BB'},
   {'core': 'multicore',  'path': 'paper',              'name': 'minimal',               'oil': 'system_minimal.json', 'locks': 'EXTRACT'},
   {'core': 'multicore',  'path': 'paper',              'name': 'event',                 'oil': 'system_event.json', 'locks': 'EXTRACT'},
@@ -184,6 +184,13 @@ foreach app : autosar_apps
     sys_test = files(app['core'] / app['path'] / app['mtrace'])
   endif
   app += {'sys_test': sys_test}
+
+  if not app.has_key('ttrace')
+    time_test =  disabler()
+  else
+    time_test = files(app['core'] / app['path'] / app['ttrace'])
+  endif
+  app += {'time_test': time_test}
 
   # timings for multisse with lock elision
   if not app.has_key('timing')
